--- a/style.css
+++ b/style.css
@@ -8,25 +8,33 @@ span{
     width: 100%;
     justify-content: center;
     flex-direction: row;
+    padding-top: 12%;
 }
 
-.scissors{
-width: 10%;
-height: 10%;
-}
 
 img{
     width: 10%;
     height: 10%;
     justify-content: center;
+    
+    
+}
+
+img:hover{
+    transform: scale(1.3);
 }
 
 p{
     text-align: center;
     padding-top: 10px;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 40px;
 }
 
-.buttons{
-display: flex;
-justify-content: center;
+.pick{
+    text-align: center;
+    font-size: 32px;
+    font-family: "Lucida Console", "Courier New", monospace;
+    padding-top: 10px ;
+    
 }
