--- a/style.css
+++ b/style.css
@@ -38,3 +38,18 @@ p{
     padding-top: 10px ;
     
 }
+
+.box{
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+   
+}
+
+.box2{
+    background-color: rgb(243, 239, 239);
+     width: 50%;
+     padding: 10px;
+     border-radius: 10%;
+
+}
