--- a/style.css
+++ b/style.css
@@ -43,13 +43,30 @@ p{
     display: flex;
     justify-content: center;
     padding-top: 100px;
-   
 }
 
-.box2{
+.box2 {
     background-color: rgb(243, 239, 239);
-     width: 50%;
-     padding: 10px;
-     border-radius: 10%;
+    width: 50%;
+    padding: 10px;
+    border: 3px solid black;
+    border-radius: 15px;
+    animation-name: box2-animation;
+    animation-duration: 2.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+  }
+  
+  /* @keyframes box2-animation {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  } */
+  
 
-}
